--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ a{
 #about{
     padding: 70px 0;
     justify-content: space-around;
+    gap: 1rem;
 }
 
 #about img{
@@ -184,11 +185,10 @@ a{
     width: 50%;
     align-items: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-direction: column;
+    gap: 0;
 }
-
-
 
 
 /* footer  */
@@ -386,6 +386,7 @@ nav > .get-started{
 
 #about #content{
     width: auto !important;
+    gap: 2rem;
 }
 
 /* service page  */
@@ -429,6 +430,10 @@ nav > .get-started{
     gap: 1rem;
   }
   .menu-toggle{ display: none; } */
+
+#about #content{
+    gap: 2rem;
+  }
 
 #services-list{
     grid-template-columns: repeat(2, 1fr);
